--- a/about.html
+++ b/about.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boldo</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
 </head>
@@ -128,12 +135,12 @@
                             </div>
                             <div class="ourteam__lables">
                                 <div class="ourteam__columns">
-                                    <div class="ourteam__card card">
-                                        <div class="card__photo">
+                                    <div class="ourteam__card card-team">
+                                        <div class="card-team__photo">
                                             <img src="./img/Our Team/Michael Scott.png" alt="Photo">
                                         </div>
-                                        <div class="card__name">Michael Scott</div>
-                                        <div class="card__position top-title">General Manager</div>
+                                        <div class="card-team__name">Michael Scott</div>
+                                        <div class="card-team__position top-title">General Manager</div>
                                     </div>
                                     <div class="ourteam__card card-team">
                                         <div class="card-team__photo">
@@ -211,9 +218,7 @@
                                 <div class="email__email">
                                     <input placeholder="Your email address" type="text">
                                 </div>
-                                <div class="email__button">
-                                    <a href="">Start now</a>
-                                </div>
+                                <button class="email__button">Start now</button>
                             </div>
                         </div>
                         <div class="email__back ibg">
