--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boldo</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
 </head>
@@ -36,11 +43,6 @@
                         <div class="header-dark__login">
                             <button class="header-dark__button">
                                 <a href="">Log in</a>
-                            </button>
-                        </div>
-                        <div class="header-dark__burger">
-                            <button class="header-dark__burger-menu">
-                                <img src="./img/Main Blog/whiteburger.svg" alt="burger">
                             </button>
                         </div>
                     </div>
@@ -179,9 +181,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="ourblog__button">
-                                <a href="">Load more</a>
-                            </div>
+                            <a href="blog.html" class="ourblog__button">Load more</a>
                         </div>
                     </div>
                 </section>
@@ -193,9 +193,7 @@
                                 <div class="email__email">
                                     <input placeholder="Your email address" type="text">
                                 </div>
-                                <div class="email__button">
-                                    <a href="">Start now</a>
-                                </div>
+                                <button class="email__button">Start now</button>
                             </div>
                         </div>
                         <div class="email__back ibg">
