--- a/index.html
+++ b/index.html
@@ -45,11 +45,6 @@
                                 <a href="">Log in</a>
                             </button>
                         </div>
-                        <div class="header__burger">
-                            <button class="header__burger-menu">
-                                <img src="./img/Header/burger.svg" alt="burger">
-                            </button>
-                        </div>
                     </div>
                 </div>
             </header>
@@ -64,8 +59,8 @@
                                         mover advantage innovator success
                                         deployment non-disclosure. lorem</div>
                                     <div class="text-item__buttons">
-                                        <a href="" class="text-item__buy">Buy template</a>
-                                        <a href="" class="text-item__explore">Explore</a>
+                                        <a href="#" class="text-item__buy">Buy template</a>
+                                        <a href="#" class="text-item__explore">Explore</a>
                                     </div>
                                 </div>
                                 <div class="main__graphik">
@@ -124,9 +119,9 @@
                                                 <img src="./img/Services/oneman.png" alt="Man">
                                             </div>
                                             <div class="column-item__name">Cool feature title lorem</div>
-                                            <div class="column-item__text">Learning curve network effects return on investment. lorem</div>
+                                            <div class="column-item__text">Learning curve network effects return on investment.</div>
                                             <div class="column-item__explore">
-                                                <a href="">Explore page</a>
+                                                <a href="#">Explore page</a>
                                             </div>
                                         </div>
                                     </div>
@@ -138,7 +133,7 @@
                                             <div class="column-item__name">Even cooler feature</div>
                                             <div class="column-item__text">Learning curve network effects return on investment. </div>
                                             <div class="column-item__explore">
-                                                <a href="">Explore page</a>
+                                                <a href="#">Explore page</a>
                                             </div>
                                         </div>
                                         
@@ -151,7 +146,7 @@
                                             <div class="column-item__name">Even feature</div>
                                             <div class="column-item__text">Learning curve network effects return on investment.</div>
                                             <div class="column-item__explore">
-                                                <a href="">Explore page</a>
+                                                <a href="#">Explore page</a>
                                             </div>
                                         </div>
                                         
@@ -181,9 +176,9 @@
                                             <li class="label-connect__item">Advisor success customer launch party.</li>
                                             <li class="label-connect__item">Business-to-consumer long tail.</li>
                                         </ul>
-                                        <div class="label-connect__button">
-                                            <a href="">Start now</a>
-                                        </div>
+                                        <button class="label-connect__button">
+                                            <div>Start now</div>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -220,14 +215,14 @@
                                 <div class="template__title title">An enterprise template to ramp up your company website</div>
                                 <div class="template__arrows">
                                     <div class="template__arrow">
-                                        <a href="">
+                                        <div>
                                             <img src="./img/Template/arrow-right.svg" alt="Arrow right">
-                                        </a>
+                                        </div>
                                     </div>
                                     <div class="template__arrow">
-                                        <a href="">
+                                        <div>
                                             <img src="./img/Template/arrow-left.svg" alt="Arrow left">
-                                        </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -243,7 +238,7 @@
                                                 <div class="cards__data">
                                                     <div class="cards__name">Albus Dumbledore</div>
                                                     <div class="cards__email">
-                                                        <a href="">Manager @ Howarts</a>
+                                                        <a href="#">Manager @ Howarts</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -259,7 +254,7 @@
                                                 <div class="cards__data">
                                                     <div class="cards__name">Severus Snape</div>
                                                     <div class="cards__email">
-                                                        <a href="">Manager @ Slytherin</a>
+                                                        <a href="#">Manager @ Slytherin</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -275,7 +270,7 @@
                                                 <div class="cards__data">
                                                     <div class="cards__name">Harry Potter</div>
                                                     <div class="cards__email">
-                                                        <a href="">Team Leader @ Gryffindor</a>
+                                                        <a href="#">Team Leader @ Gryffindor</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -298,7 +293,7 @@
                                     <div class="workplace__point point-workplace">
                                         <div class="point-workplace__name">We connect our customers with the best?</div>
                                         <div class="point-workplace__arrow">
-                                            <a href="">
+                                            <a href="#">
                                                 <img src="./img/Workplace/arrowdown.svg" alt="Arrow">
                                             </a>
                                         </div>
@@ -306,7 +301,7 @@
                                     <div class="workplace__point point-workplace">
                                         <div class="point-workplace__name">Android research & development rockstar?</div>
                                         <div class="point-workplace__arrow">
-                                            <a href="">
+                                            <a href="#">
                                                 <img src="./img/Workplace/arrowdown.svg" alt="Arrow">
                                             </a>
                                         </div>
@@ -372,9 +367,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="ourblog__button">
-                                <a href="blog.html">Load more</a>
-                            </div>
+                            <a href="blog.html" class="ourblog__button">Load more</a>
                         </div>
                     </div>
                 </section>
@@ -386,9 +379,7 @@
                                 <div class="email__email">
                                     <input placeholder="Your email address" type="text">
                                 </div>
-                                <div class="email__button">
-                                    <a href="">Start now</a>
-                                </div>
+                                <button class="email__button">Start now</button>
                             </div>
                         </div>
                         <div class="email__back ibg">
@@ -402,10 +393,10 @@
                     <div class="footer__body">
                         <div class="footer__rights">
                             <div class="footer__info">
-                                <div class="footer__logo">
+                                <a href="index.html" class="footer__logo">
                                     <img src="./img/Footer/Logo Shape.svg" alt="Logo">
                                     <div class="footer__logo-name">Boldo</div>
-                                </div>
+                                </a>
                                 <div class="footer__text">
                                     Social media validation business model canvas graphical user interface launch party creative facebook iPad twitter.
                                 </div>
@@ -420,9 +411,9 @@
                                     <div class="footer__lable">Landings</div>
                                     <nav class="footer__menu menu-footer">
                                         <ul class="menu-footer__list">
-                                            <li class="menu-footer__item"><a href="" class="menu-footer__link">Home</a></li>
-                                            <li class="menu-footer__item"><a href="" class="menu-footer__link">Products</a></li>
-                                            <li class="menu-footer__item"><a href="" class="menu-footer__link">Services</a></li>
+                                            <li class="menu-footer__item"><a href="#" class="menu-footer__link">Home</a></li>
+                                            <li class="menu-footer__item"><a href="#" class="menu-footer__link">Products</a></li>
+                                            <li class="menu-footer__item"><a href="#" class="menu-footer__link">Services</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -430,9 +421,9 @@
                                     <div class="footer__lable">Company</div>
                                     <nav class="footer__menu menu-footer">
                                         <ul class="menu-footer__list">
-                                            <li class="menu-footer__item"><a href="" class="menu-footer__link">Home</a></li>
-                                            <li class="menu-footer__item"><a href="" class="menu-footer__link">Services</a></li>
-                                            <li class="menu-footer__item"><a href="" class="menu-footer__link">Careers <span>Hiring!</span></a></li>
+                                            <li class="menu-footer__item"><a href="#" class="menu-footer__link">Home</a></li>
+                                            <li class="menu-footer__item"><a href="#" class="menu-footer__link">Services</a></li>
+                                            <li class="menu-footer__item"><a href="#" class="menu-footer__link">Careers <span>Hiring!</span></a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -440,9 +431,9 @@
                                     <div class="footer__lable">Resources</div>
                                     <nav class="footer__menu menu-footer">
                                         <ul class="menu-footer__list">
-                                            <li class="menu-footer__item"><a href="" class="menu-footer__link">Blog</a></li>
-                                            <li class="menu-footer__item"><a href="" class="menu-footer__link">Products</a></li>
-                                            <li class="menu-footer__item"><a href="" class="menu-footer__link">Services</a></li>
+                                            <li class="menu-footer__item"><a href="#" class="menu-footer__link">Blog</a></li>
+                                            <li class="menu-footer__item"><a href="#" class="menu-footer__link">Products</a></li>
+                                            <li class="menu-footer__item"><a href="#" class="menu-footer__link">Services</a></li>
                                         </ul>
                                     </nav>
                                 </div>
