--- a/about.html
+++ b/about.html
@@ -45,11 +45,6 @@
                                 <a href="about.html">Log in</a>
                             </button>
                         </div>
-                        <div class="header__burger">
-                            <button class="header__burger-menu">
-                                <img src="./img/Header/burger.svg" alt="burger">
-                            </button>
-                        </div>
                     </div>
                 </div>
             </header>
@@ -233,7 +228,7 @@
                         <div class="footer__rights">
                             <div class="footer__info">
                                 <div class="footer__logo">
-                                    <img src="/img/Footer/Logo Shape.svg" alt="Logo">
+                                    <img src="./img/Footer/Logo Shape.svg" alt="Logo">
                                     <div class="footer__logo-name">Boldo</div>
                                 </div>
                                 <div class="footer__text">
