--- a/blog.html
+++ b/blog.html
@@ -208,7 +208,7 @@
                         <div class="footer__rights">
                             <div class="footer__info">
                                 <div class="footer__logo">
-                                    <img src="/img/Footer/Logo Shape.svg" alt="Logo">
+                                    <img src="./img/Footer/Logo Shape.svg" alt="Logo">
                                     <div class="footer__logo-name">Boldo</div>
                                 </div>
                                 <div class="footer__text">
