--- a/about.html
+++ b/about.html
@@ -277,6 +277,6 @@
                 </div>
             </footer>
         </div>
-        <script src="/js/script.js"></script>
+        <script src="./js/script.js"></script>
 </body>
 </html>
